; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-u300/extr_clock.c_clk_get_rate_i2s_i2c_spi.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-u300/extr_clock.c_clk_get_rate_i2s_i2c_spi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @clk_get_rate_i2s_i2c_spi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @clk_get_rate_i2s_i2c_spi(%struct.clk* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.clk*, align 8
  %4 = alloca i32, align 4
  store %struct.clk* %0, %struct.clk** %3, align 8
  %5 = call i32 (...) @syscon_clk_get_rate()
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %9 [
    i32 128, label %7
    i32 129, label %7
    i32 130, label %8
    i32 131, label %8
    i32 132, label %8
  ]

7:                                                ; preds = %1, %1
  store i64 13000000, i64* %2, align 8
  br label %14

8:                                                ; preds = %1, %1, %1
  store i64 26000000, i64* %2, align 8
  br label %14

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9
  %11 = load %struct.clk*, %struct.clk** %3, align 8
  %12 = getelementptr inbounds %struct.clk, %struct.clk* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %2, align 8
  br label %14

14:                                               ; preds = %10, %8, %7
  %15 = load i64, i64* %2, align 8
  ret i64 %15
}

declare dso_local i32 @syscon_clk_get_rate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
